# JENEZIS

./: .coveragerc  .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  ACTION_MATRIX.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_INDEX.md  AUDIT_README.md  CLAUDE.md  CURRENT_STATE.md  Dockerfile  EXECUTION_48H.md  LICENSE  README.md  TECH_AUDIT_FINDINGS.md  alembic.ini  docker-compose.yml  monitor_beast.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  rag-evaluation.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_genesis_v2_universal_schema.py  1b8a7b3e9c2d_add_ontology_table.py  2c7a8d5b4e3f_rebuild_symbolic_foundation.py  3a2b1c0d9e8f_add_enrichment_queue.py  4a9d7c6e3b2f_initial_migration.py  4cc72cd32f0f_initial_postgresql_schema_with_pgvector.py
archived_code/: entity_resolver_sqlite.py  main_sqlite.py
archived_code/domain/: __init__.py  config_loader.py
archived_code/domains/: it_skills.yaml  medical_diagnostics.yaml  product_catalog.yaml
archived_code/enrichment/: wikipedia_enricher.py
archived_code/graph_ingestion/: ingest.py
data/examples/: README.md  cv_example.json
data/output/: cypher_queries_example.txt
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  AUDIT_COMPLET.md  AUDIT_SUMMARY.txt  CLEANUP_CHECKLIST.md  EXECUTIVE_PITCH.md  MIGRATION_STRATEGY.md  domain_config_schema.yaml
docs/migration_scripts/: README.md  genesis_models.py.v2_not_deployed  migrate_sqlite_to_postgres.py
doublehelix/: __init__.py
doublehelix/core/: __init__.py  config.py  connections.py  security.py
doublehelix/ingestion/: chunker.py  embedder.py  extractor.py  parser.py  resolver.py
doublehelix/rag/: generator.py  retriever.py
doublehelix/storage/: __init__.py  cost_tracker.py  graph_store.py  metadata_store.py
doublehelix/utils/: __init__.py
examples/fastapi_app/: celery_config.py  main.py  tasks.py
grafana-provisioning/dashboards/: dashboard.yml  ontology-dashboard.json
grafana-provisioning/datasources/: postgresql.yml  sqlite.yml
jenezis/: __init__.py
jenezis/core/: config.py  connections.py  prompt_security.py  security.py
jenezis/ingestion/: __init__.py  chunker.py  embedder.py  extractor.py  resolver.py  validator.py
jenezis/rag/: __init__.py  generator.py  retriever.py
jenezis/storage/: cost_tracker.py  falkor_engine.py  graph_store.py  metadata_store.py
jenezis/utils/: logging.py
scripts/: monitor.sh  run_ragas_eval.py  setup_postgres_local.sh  start-monitoring.sh  validate_migration.py
src/: celery_app.py  config.py
src/api/: auth.py  main.py  metrics.py
src/auth/: jwt.py
src/cli/: analyze_unmapped.py  densify_ontology.py  export_entity_review.py  export_human_review.py  import_approved.py  import_entity_enrichment.py  mass_densify.py  night_beast.py  prompts.py
src/db/: migrate_ontology_to_db.py  postgres_connection.py  postgres_models.py
src/entity_resolver/: api.py
src/tasks/: enrichment.py  suggestions.py
tests/: __init__.py  conftest.py  pytest.ini  test_api.py
tests/adversarial/: __init__.py  conftest.py  test_cypher_injection.py  test_file_upload_dos.py  test_orphan_creation.py  test_path_traversal.py  test_prompt_injection.py  test_race_conditions.py  test_state_machine_violations.py
tests/api/: __init__.py  test_integration.py
tests/evaluation/: dataset.json  test_ragas.py
tests/integration/: .gitkeep  __init__.py  conftest.py  test_document_lifecycle.py
tests/load/: __init__.py  locustfile.py
tests/unit/: .gitkeep  __init__.py  conftest.py  test_auth.py  test_chunker.py  test_cli_analyze_unmapped.py  test_cli_densify_ontology.py  test_cost_tracker.py  test_coverage_completion.py  test_database.py  test_database_real.py  test_db_scripts.py  test_embedder.py  test_enrichment_workflow.py  test_entity_resolver_api.py  test_entity_resolver_db_init.py  test_export_human_review.py  test_extractor.py  test_falkor_engine.py  test_generator.py  test_graph_ingestion.py  test_graph_store.py  test_harmonizer_api.py  test_import_approved_simple.py  test_logging.py  test_mass_densify.py  test_mass_densify_comprehensive.py  test_metrics.py  test_metrics_direct.py  test_night_beast.py  test_night_beast_comprehensive.py  test_parser.py  test_postgres_connection.py  test_postgres_models.py  test_prompt_security.py  test_retriever.py  test_security.py  test_upload_security.py  test_validator.py  test_wikipedia_enricher_comprehensive.py
