[tool.poetry]
name = "doublehelix-graphrag"
version = "1.0.0"
description = "Industrial-grade, lightweight, and hyper-adaptive GraphRAG library."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "doublehelix"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0" # For Postgres
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9" # For Alembic sync operations
neo4j = "^5.20.0"
boto3 = "^1.34.100"
botocore = "^1.34.100"
redis = "^5.0.4"
celery = "^5.4.0"
openai = "^1.25.2"
anthropic = "^0.27.0"
tiktoken = "^0.7.0"
docling = "^0.2.2" # Assuming a suitable parser library exists
ragas = "^0.1.7"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
python-multipart = "^0.0.9" # For FastAPI file uploads
aiohttp = "^3.9.5" # For async HTTP requests in examples/tests

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0" # For testing FastAPI async client

[tool.poetry.group.spacy.dependencies]
spacy = "^3.7.4"
# Add models like:
# spacy-model-en_core_web_sm = "..."

[tool.poetry.build]
script = "build.py"
generate-setup-file = false
