[tool.poetry]
name = "doublehelix-graphrag"
version = "1.0.0"
description = "Industrial-grade, lightweight, and hyper-adaptive GraphRAG library."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "doublehelix"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.30.0"  # For Postgres
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9" # For Alembic sync operations
pgvector = "^0.2.0"
neo4j = "^5.20.0"
boto3 = "^1.34.100"
botocore = "^1.34.100"
redis = "^5.0.4"
celery = "^5.4.0"
openai = "^1.25.2"
anthropic = "^0.27.0"
tiktoken = "^0.8.0"
docling = "^2.0.0"  # Document parsing library
ragas = "^0.1.7"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.0"
python-multipart = "^0.0.9" # For FastAPI file uploads
aiohttp = "^3.9.5" # For async HTTP requests in examples/tests

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-xdist = "^3.5.0"
pytest-timeout = "^2.3.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
bandit = "^1.7.8"
safety = "^3.0.0"
locust = "^2.24.0"

[tool.poetry.group.spacy.dependencies]
spacy = "^3.7.4"
# Add models like:
# spacy-model-en_core_web_sm = "..."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
